--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "dist": "webpack --progress --colors --optimize-minimize",
     "prepublish": "npm run build && npm run dist && npm run test",
     "preversion": "npm test",
-    "test": "mocha",
-    "prepare": "npm run build"  
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
