Refactor AuthenticationResponse.errorResponse method

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dist": "webpack --progress",
     "prepare": "npm run build && npm run dist && npm run test",
     "preversion": "npm test",
-    "test": "mocha"
+    "test": "mocha --timeout=10000"
   },
   "repository": {
     "type": "git",
@@ -43,6 +43,7 @@
     "@trust/webcrypto": "0.9.2",
     "base64url": "^3.0.0",
     "node-fetch": "^2.1.2",
+    "standard-http-error": "^2.0.1",
     "text-encoding": "^0.6.4",
     "whatwg-url": "^6.4.1"
   },
