--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@trust/oidc-rp",
-  "version": "0.6.0",
+  "name": "@solid/oidc-rp",
+  "version": "0.7.1",
   "description": "OpenID Connect Relying Party client library",
   "main": "./lib/index.js",
   "module": "./src/index.js",
@@ -38,7 +38,7 @@
   },
   "homepage": "https://github.com/anvilresearch/oidc-rp#readme",
   "dependencies": {
-    "@trust/jose": "solid/jose#rc-0.1.8",
+    "@solid/jose": "0.1.8",
     "@trust/json-document": "^0.1.4",
     "@trust/webcrypto": "0.9.2",
     "base64url": "^3.0.0",
