--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@solid/oidc-rp",
   "version": "0.9.0",
   "description": "OpenID Connect Relying Party client library",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "module": "./src/index.js",
   "files": [
     "lib",
@@ -10,9 +10,8 @@
     "src"
   ],
   "scripts": {
-    "build": "babel src -d lib",
     "dist": "webpack --progress",
-    "prepare": "npm run build && npm run dist && npm run test",
+    "prepare": "npm run dist && npm run test",
     "preversion": "npm test",
     "test": "mocha --timeout=10000"
   },
@@ -20,7 +19,7 @@
     "type": "git",
     "url": "git+https://github.com/solid/oidc-rp.git"
   },
-  "author": "Anvil Research, Inc.",
+  "author": "Solid Project",
   "contributors": [
     {
       "name": "Christian Smith",
@@ -36,11 +35,9 @@
   "bugs": {
     "url": "https://github.com/solid/oidc-rp/issues"
   },
-  "homepage": "https://github.com/solid/oidc-rp#readme",
+  "homepage": "https://github.com/solid/oidc-rp",
   "dependencies": {
-    "@solid/jose": "0.1.8",
-    "@trust/json-document": "^0.1.4",
-    "@trust/webcrypto": "0.9.2",
+    "@solid/jose": "solid/jose#swap-webcrypto",
     "base64url": "^3.0.0",
     "node-fetch": "^2.1.2",
     "standard-http-error": "^2.0.1",
