--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@solid/oidc-rp",
-  "version": "0.10.0",
+  "name": "oidc-rp-adapted",
+  "version": "0.26.0",
   "description": "OpenID Connect Relying Party client library",
   "main": "./src/index.js",
   "module": "./src/index.js",
@@ -9,35 +9,24 @@
   },
   "files": [
     "dist",
-    "src"
+    "lib"
   ],
   "scripts": {
+    "build": "npm run build:lib",
     "dist": "webpack --progress",
     "prepare": "npm run dist && npm run test",
     "preversion": "npm test",
-    "test": "mocha --timeout=10000"
+    "test": "mocha --timeout=10000",
+    "build:lib": "rm -rf lib && babel src --env-name production -d lib",
+    "prebuildpackage": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/solid/oidc-rp.git"
+    "url": "git+https://github.com/pedropiloto/oidc-rp-adapted.git"
   },
-  "author": "Solid Project",
-  "contributors": [
-    {
-      "name": "Christian Smith",
-      "email": "smith@anvil.io",
-      "url": "http://anvil.io"
-    },
-    {
-      "name": "Dmitri Zagidulin",
-      "url": "https://github.com/dmitrizagidulin"
-    }
-  ],
+  "author": "Pedro Piloto",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/solid/oidc-rp/issues"
-  },
-  "homepage": "https://github.com/solid/oidc-rp",
+  "homepage": "https://github.com/pedropiloto/oidc-rp-adapted",
   "dependencies": {
     "@solid/jose": "^0.5.0",
     "base64url": "^3.0.1",
