--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dist": "webpack --progress",
     "prepare": "npm run dist && npm run test",
     "preversion": "npm test",
-    "test": "mocha --timeout=10000"
+    "test": "mocha --timeout=10000 --recursive"
   },
   "repository": {
     "type": "git",
@@ -39,12 +39,11 @@
   },
   "homepage": "https://github.com/solid/oidc-rp",
   "dependencies": {
-    "@solid/jose": "^0.5.0",
+    "@solid/jose": "^0.6.0",
     "base64url": "^3.0.1",
-    "isomorphic-webcrypto": "^2.3.2",
     "node-fetch": "^2.6.0",
     "standard-http-error": "^2.0.1",
-    "whatwg-url": "^7.1.0"
+    "whatwg-url": "^8.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -52,11 +51,11 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dirty-chai": "^2.0.1",
-    "mocha": "^6.2.2",
-    "nock": "^11.7.0",
-    "sinon": "^7.5.0",
-    "sinon-chai": "^3.3.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "mocha": "^8.0.1",
+    "nock": "^13.0.2",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
   }
 }
