--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "src"
   ],
   "scripts": {
+    "build": "npm run dist",
     "dist": "webpack --progress",
     "prepare": "npm run dist && npm run test",
     "preversion": "npm test",
@@ -40,10 +41,11 @@
   "homepage": "https://github.com/solid/oidc-rp",
   "dependencies": {
     "@solid/jose": "^0.6.0",
+    "assert": "^2.0.0",
     "base64url": "^3.0.1",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "standard-http-error": "^2.0.1",
-    "whatwg-url": "^8.1.0"
+    "whatwg-url": "^8.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -51,11 +53,11 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dirty-chai": "^2.0.1",
-    "mocha": "^8.0.1",
-    "nock": "^13.0.2",
-    "sinon": "^9.0.2",
+    "mocha": "^8.2.0",
+    "nock": "^13.0.4",
+    "sinon": "^9.2.0",
     "sinon-chai": "^3.5.0",
-    "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0"
   }
 }
